# jpAboytesMCP

./: .gitignore  README.md  main.py  mcp.json  pyproject.toml  server.py  test_mcp_server.py
src/: __init__.py  config.py  gemini.py  main.py  supabase_client.py
